--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="et_nombre">Nombre viajero</string>
+    <string name="bt_jugar">viajar</string>
+    <string name="tv1">Pon tu nombre en el pasaporte y empieza el viaje</string>
+    <string name="tv_nuestro">Ivan Jacome y Cristina Sanchez</string>
+    <string name="tv_record"></string>
+    <string name="iv_vidas"></string>
+    <string name="tv_score">visados = 0</string>
+    <string name="bt_opcion1"></string>
+    <string name="bt_opcion2"></string>
+    <string name="bt_opcion3"></string>
+    <string name="tv_nombre"></string>
+    <string name="iv_banderas">banderas</string>
 </resources>
